force-app/main/default/objects/AgentInteraction__c/AgentInteraction__c.object-meta.xml
<CustomObject>
    <label>Agent Interaction</label>
    <pluralLabel>Agent Interactions</pluralLabel>
    <nameField>
        <label>Agent Interaction Name</label>
        <type>AutoNumber</type>
        <displayFormat>AI-{0000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Compliance audit log for every Agentforce copilot interaction. Never delete records.</description>
</CustomObject>