force-app/main/default/objects/AgentInteraction__c/fields/AdvisorId__c.field-meta.xml
<CustomField>
    <fullName>AdvisorId__c</fullName>
    <label>Advisor</label>
    <description>Advisor who triggered the query</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>AgentInteractions</relationshipName>
    <relationshipLabel>Agent Interactions</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>