force-app/main/default/objects/AgentInteraction__c/fields/AgentTopic__c.field-meta.xml
<CustomField>
    <fullName>AgentTopic__c</fullName>
    <label>Agent Topic</label>
    <description>Which Topic handled this query</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Portfolio Summary</fullName>
                <default>true</default>
                <label>Client Portfolio Summary</label>
            </value>
            <value>
                <fullName>Drift &amp; Alert Lookup</fullName>
            </value>
            <value>
                <fullName>Segment Membership Query</fullName>
            </value>
            <value>
                <fullName>Market Data Query</fullName>
            </value>
            <value>
                <fullName>Escalation - Investment Advice</fullName>
            </value>
            <value>
                <fullName>Escalation - Trade Recommendation</fullName>
            </value>
            <value>
                <fullName>Escalation - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>