force-app/main/default/objects/AgentInteraction__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>Client</label>
    <description>Client record in context (if any)</description>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AgentInteractions</relationshipName>
    <relationshipLabel>Agent Interactions</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>