force-app/main/default/objects/AgentInteraction__c/fields/EscalationReason__c.field-meta.xml
<CustomField>
    <fullName>EscalationReason__c</fullName>
    <label>Escalation Reason</label>
    <description>Why agent escalated (out-of-scope category)</description>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>