force-app/main/default/objects/AgentInteraction__c/fields/InteractionTime__c.field-meta.xml
<CustomField>
    <fullName>InteractionTime__c</fullName>
    <label>Interaction Time</label>
    <description>Timestamp of interaction</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>