force-app/main/default/objects/AgentInteraction__c/fields/QueryText__c.field-meta.xml
<CustomField>
    <fullName>QueryText__c</fullName>
    <label>Query Text</label>
    <description>Advisor&apos;s original question verbatim</description>
    <type>LongTextArea</type>
    <length>32768</length>

</CustomField>