force-app/main/default/objects/AgentInteraction__c/fields/ResponseText__c.field-meta.xml
<CustomField>
    <fullName>ResponseText__c</fullName>
    <label>Response Text</label>
    <description>Agent&apos;s generated response</description>
    <type>LongTextArea</type>
    <length>32768</length>

</CustomField>