force-app/main/default/objects/AgentInteraction__c/fields/WasEscalated__c.field-meta.xml
<CustomField>
    <fullName>WasEscalated__c</fullName>
    <label>Was Escalated</label>
    <description>True if routed to human</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>