force-app/main/default/objects/AgentInteraction__c/validationRules/Advisor_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Advisor_Required</fullName>
    <active>true</active>
    <description>Ensures every Agent Interaction has an advisor assigned.</description>
    <errorConditionFormula>ISBLANK(AdvisorId__c)</errorConditionFormula>
    <errorMessage>An Advisor must be specified on every Agent Interaction record.</errorMessage>
</ValidationRule>