force-app/main/default/objects/AgentInteraction__c/validationRules/No_Manual_Edit_After_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Manual_Edit_After_Creation</fullName>
    <active>true</active>
    <description>Prevents any edits to agent interaction records after initial creation — immutable compliance log.</description>
    <errorConditionFormula>NOT(ISNEW())</errorConditionFormula>
    <errorMessage>Agent interaction records are immutable compliance logs and cannot be edited.</errorMessage>
</ValidationRule>