force-app/main/default/objects/AgentInteraction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All Agent Interactions</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>ContactId__c</columns>
    <columns>AgentTopic__c</columns>
    <columns>WasEscalated__c</columns>
    <columns>InteractionTime__c</columns>
    <columns>AdvisorId__c</columns>
</ListView>