force-app/main/default/objects/AgentInteraction__c/listViews/Escalated.listView-meta.xml
<ListView>
    <fullName>Escalated</fullName>
    <label>Escalated Interactions</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WasEscalated__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <columns>NAME</columns>
    <columns>ContactId__c</columns>
    <columns>AgentTopic__c</columns>
    <columns>EscalationReason__c</columns>
    <columns>InteractionTime__c</columns>
    <columns>AdvisorId__c</columns>
</ListView>